# RobotHub-TransportServer

./: .dockerignore  .gitignore  Dockerfile  README.md  test-docker.sh
.github/workflows/: docker.yml  sync-to-hf.yml
client/: COMPARE.md
client/js/: .gitignore  README.md  package.json  tsconfig.json  vite.config.ts
client/js/examples/: basic-consumer.js  basic-producer.js
client/js/src/: index.ts
client/js/tests/: README.md  consumer.test.ts  factory.test.ts  integration.test.ts  producer.test.ts  rest-api.test.ts  setup.ts  (+1 more)
client/python/: README.md  pyproject.toml
client/python/examples/: README.md  basic_consumer.py  basic_producer.py  consumer_first_recorder.py  context_manager_example.py  producer_consumer_demo.py  room_management.py  test_consumer_fix.py  video_consumer_example.py  video_producer_example.py
client/python/src/transport_server_client/: __init__.py  client.py
client/python/src/transport_server_client/video/: __init__.py  consumer.py  core.py  factory.py  producer.py  types.py
client/python/tests/: README.md  conftest.py  test_consumer.py  test_factory_functions.py  test_integration.py  test_producer.py  test_rest_api.py  test_video_client.py
demo/: .env.example  README.md  package.json  svelte.config.js  test-demo.js  vite.config.ts
server/: launch_with_ui.py  launch_without_ui.py  pyproject.toml
server/src/: api.py
server/src/lerobot_arena_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
server/src/robotics/: api.py  core.py  models.py
server/src/video/: api.py  core.py  models.py
(+25 files in other folders)
